Bug 54365 - [swrast] piglit fbo-1d regression
Summary: [swrast] piglit fbo-1d regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
: 54496 54914 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-01 22:33 UTC by Vinson Lee
Modified: 2012-09-17 07:42 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
fix the DIFFERENT_SIGNS() function (894 bytes, patch)
2012-09-04 16:25 UTC, Brian Paul
Details | Splinter Review

Description Vinson Lee 2012-09-01 22:33:44 UTC
$ ./bin/fbo-1d -auto
Probe at (26,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (27,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (28,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (29,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (30,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (31,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (32,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (33,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (34,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (35,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (36,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (37,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (38,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (39,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (40,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
Probe at (41,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 0.000000 0.000000 0.000000
PIGLIT: {'result': 'fail' }


c8a86f717f8e30204c615d06bcec159410ac06c5 is the first bad commit
commit c8a86f717f8e30204c615d06bcec159410ac06c5
Author: Brian Paul <brianp@vmware.com>
Date:   Fri Aug 31 08:33:31 2012 -0600

    mesa: move IS_NEGATIVE() and DIFFERENT_SIGNS() to macros.h

:040000 040000 eff6e3c33720c5ba2b44e4001463dfa08e58a657 37d17deb34db3b173d916896457f452566d3ae13 M	src
bisect run success
Comment 1 Brian Paul 2012-09-04 16:25:07 UTC
Created attachment 66615 [details] [review]
fix the DIFFERENT_SIGNS() function

Vinson, can you try this patch?
Comment 2 Brian Paul 2012-09-04 16:39:11 UTC
*** Bug 54496 has been marked as a duplicate of this bug. ***
Comment 3 Vinson Lee 2012-09-04 17:34:12 UTC
(In reply to comment #1)
> Created attachment 66615 [details] [review] [review]
> fix the DIFFERENT_SIGNS() function
> 
> Vinson, can you try this patch?

Attachment 66615 [details] fixes fbo-1d and texture-packed-formats on swrast.

Tested-by: Vinson Lee <vlee@freedesktop.org>
Comment 4 Brian Paul 2012-09-04 17:39:17 UTC
Patch committed as f73ffacbf0c65ad843406af37aa35e9112bc8038
Comment 5 Timo Aaltonen 2012-09-17 07:42:42 UTC
*** Bug 54914 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.